--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@apollo/client": "^3.0.0",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/router-store": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "apollo-angular": "^5.0.2",
     "apollo-angular-link-http": "^1.11.0",
     "apollo-client": "^2.6.10",
